Voxy→Foxy: 全量构建通过, 产出可加载的 Forge 1.20.1 mod jar
./gradlew build 成功: compileJava + mixin AP/refmap + reobfJar + jar 全通过。

本提交收尾的修复:
- 又一批被掩盖的 Java 19/21 特性: Integer/Long.compress/expand→BitOps
  (RenderDataFactory/OccupancySet/OccupancySet2); Math.clamp→Mth.clamp;
  List getLast/removeLast/removeFirst (SequencedCollection)→索引访问
- 模型烘焙: ReuseVertexConsumer 重写为 1.20.1 VertexConsumer 接口
  (vertex/uv/.../endVertex) + BakedQuad.getVertices() 解码;
  BakedModel.collectParts→getQuads; fake-world getMinY→getMinBuildHeight;
  Direction.getUnitVec3i→getNormal; PoseStack.mulPose(Matrix4f)→mulPoseMatrix;
  registry lookupOrThrow/getValue→registryOrThrow/getOrThrow/getOptional;
  BlockColors.blockColors 改用 Holder.Reference 键
- 渲染/杂项: VoxyRenderSystem getMinSectionY/getDeltaTracker→getMinSection/
  getFrameTime; LightTexture/getFov/BossHealthOverlay.events 加 AT;
  ServerData 无 isRealm→Minecraft.isConnectedToRealms; Window.handle→getWindow;
  iris MixinLevelRenderer camera.getPosition
- iris/Oculus 集成: SamplerHolder Supplier<GlSampler>→GlSampler + addExternalSampler;
  GlSampler.MIPPED_NEAREST_NEAREST→new GlSampler(false,true,..); Gson
  setStrictness→setLenient; VoxyUniforms Matrix4fc→Matrix4f
- 注册全部 mixin 到 client/common.foxy.mixins.json (25 client + 1 common)

至此 Voxy→Foxy (Fabric/1.21.11 → Forge/1.20.1, Embeddium 0.3.31, Oculus 1.8.0)
全部 215 文件编译并构建通过。运行期行为待游戏内测试。

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>